--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
 
 .auth {
   margin: 100px auto;
-  border: 1px solid #000;
   background: #fff;
 
   display: flex;
@@ -43,16 +42,18 @@ body {
 }
 
 .auth__form {
-  width: 751px;
+  position: relative;
 
+  width: 751px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
 
-
 input {
+  position: relative;
+
   padding: 10px;
   text-align: left;
   width: 99%;
@@ -66,9 +67,7 @@ input {
   color: #4a4646;
 }
 
-
 input:hover {
-
   border: 1px solid #2148c0;
 }
 label {
@@ -76,24 +75,51 @@ label {
   color: #666666;
 }
 
+.bi-eye-slash {
+
+  position: absolute;
+  right: 25px;
+  top: 185px;
+}
+
+
+
+.eya:hover{
+  cursor: pointer;
+  transition: 0.2s;
+  transform: translate(0.5px, 0.5%);
+  border: 1px solid #2148c0;
+  border-radius: 100%;
+}
+
+.bi-eye{
+  margin-left: -30px;
+  cursor: pointer;
+}
 a {
+  position: absolute;
+
+  top: 230px;
+  right: 0px;
+
   padding: 20px 0;
   text-decoration: none;
   color: #999999;
 }
-button {
+.btn {
   width: 750px;
   height: 73px;
   border-radius: 10px;
   margin-bottom: 40px;
+  margin-top: 80px;
 
   background: #2148c0;
   color: #fff;
   border: none;
 }
 
-button:hover{
-cursor: pointer;
-transition : .2s;
-transform: translate(1px, 2%);
+.btn:hover {
+  cursor: pointer;
+  transition: 0.2s;
+  transform: translate(1px, 2%);
 }
